# ontology-anchor-engine

./: .gitignore  AGENT.md  Dev_Road_Map  README.md  SECURITY.md  Unified Tree(V14 Skeleton)  mempalace.yaml  pyproject.toml  requirements.txt  run for Linux.bat  run for windows.bat  sj_keyForm
.github/workflows/: ci.yml
backend/: auth.py  domain_registry.json  evaluation.py  ko_renderer.py  l1_sj_engine.py  label_ko.py  llm_adapter.py  main.py  server.py  user_storage.py
backend/conversation/: __init__.py  memory.py  models.py
backend/core/: __init__.py  domain_models.py  domain_registry.py  engine.py
backend/domains/: __init__.py
backend/experiment_sets/: __init__.py  analysis.py  models.py  sets.json  store.py
backend/measurement_validations/: checks.py  infer.py  parser.py  runner.py
backend/ontology/: interpretation_control.json  interpretation_synthesis.json  meta.json  research_classification.json  research_style.json
backend/ontology_overlays/: iv_review_queue.json  iv_user_overlay.json
data/: fn_tunneling_real_raw_data_min1e-10A.csv  fn_tunneling_sweep_-5V_to_+5V_step_0.02V.csv  thermionic_emission_iv_300K.txt
frontend/: index.html  index1.html  studio.html  user.html
prompts/: system_prompt_v1.md  user_template_v1.md
scripts/: build_ontology.py  evaluate_chat_quality.py  summarize_chat_eval_report.py  validate_domains.py  validate_ontology.py
tests/: conftest.py  test_api_smoke.py  test_artifacts.py  test_features.py  test_golden_samples.py  test_parser.py  test_proposals.py
tools/: generate_schema_from_lexicons.js
(+670 files in other folders)
