[project]
name = "ontology-anchor-engine"
version = "0.1.0"
description = "Ontology-backed IV analysis engine"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.135,<0.136",
  "json5>=0.12.0",
  "openai>=1.0.0",
  "pydantic>=2.0.0",
  "uvicorn>=0.42,<0.43",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<0.29",
  "pytest>=8.0,<9",
]

[tool.uv]
package = false
